# LongProbe

./: .gitignore  LONGPROBE_ROADMAP_v2.md  README.md  pyproject.toml
docs/: changelog.md
docs/getting-started/: installation.md  quick-start.md
docs/guide/: cli-reference.md
docs/integrations/: pytest.md
src/longprobe/: __init__.py  pytest.py  pytest_plugin.py
src/longprobe/cli/: main.py
src/longprobe/core/: explainer.py
src/longprobe/tui/: __init__.py  editor.py
tests/unit/: test_explainer.py  test_pytest_decorator.py
